# AndroidUSBCamera

./: .gitignore  README.md  build.gradle
app/: build.gradle
app/src/androidTest/java/com/jiangdg/usbcamera/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  openxr_interface.cpp
app/src/main/cpp/common/: android_log.h  redirect_android_log.h
app/src/main/cpp/grpc_stream_api/include/: grpc_stream_api.h
app/src/main/cpp/utils/: xr_utils.h
app/src/main/java/com/mobili/usbcamera/: OpenXRInterface.java
app/src/main/java/com/mobili/usbcamera/application/: MyApplication.java
app/src/main/java/com/mobili/usbcamera/utils/: CrashHandler.java  FileReaderUtils.java  MDNSHelper.java  MyForegroundService.java  MyVrListenerService.java
app/src/main/java/com/mobili/usbcamera/view/: OpenXRInterface.java  OverlayView.java  SplashActivity.java  (+1 more)
app/src/main/res/layout/: activity_splash.xml  activity_usbcamera.xml
app/src/test/java/com/jiangdg/usbcamera/: ExampleUnitTest.java
artifacts/docker/: dev.dockerfile
libusbcamera/src/androidTest/java/com/jiangdg/libusbcamera/: ExampleInstrumentedTest.java
libusbcamera/src/main/: AndroidManifest.xml
libusbcamera/src/main/java/com/jiangdg/usbcamera/: UVCCameraHelper.java
libusbcamera/src/main/java/com/serenegiant/usb/: CameraDialog.java  DeviceFilter.java  USBMonitor.java  UVCCamera.java
libusbcamera/src/main/java/org/easydarwin/sw/: TxtOverlay.java
libusbcamera/src/test/java/com/jiangdg/libusbcamera/: ExampleUnitTest.java
scripts/: build.sh
(+6 files in other folders)
